# Alipay

./: MANIFEST.in  README.md  setup.cfg  setup.py
hy_alipay_sdk/: aliapy_api.py  headers.py  httpclient.py  utils.py  zipfileadd.py
tests/: _test.py  cli.py
