[metadata]
name = hy_alipay_sdk
summary = huiyou alipay library
author = huiyou
author_email = team-tech-train@huiyoukeji.net
description-file = 
	README.md
classifiers = 
	Environment :: Console
	Intended Audience :: Information Technology
	Intended Audience :: System Administrators
	Operating System :: POSIX :: Linux
	Programming Language :: Python
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.6
	Programming Language :: Python :: 2.7


[global]
setup-hooks =
	pbr.hooks.setup_hook

[files]
packages = 
	hy_alipay_sdk





